tests/spectest/select.bin.wast
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\ca\80\80\80\00\0d\60"
  "\00\00\60\02\7f\7f\01\7f\60\03\7f\7f\7f\01\7f\60"
  "\03\7e\7e\7f\01\7e\60\03\7d\7d\7f\01\7d\60\03\7c"
  "\7c\7f\01\7c\60\03\70\70\7f\01\70\60\03\6f\6f\7f"
  "\01\6f\60\01\7f\01\70\60\01\7f\01\7f\60\00\01\7f"
  "\60\00\01\7e\60\01\7f\00\03\b6\80\80\80\00\35\00"
  "\02\03\04\05\02\03\04\05\06\07\00\08\09\09\00\0a"
  "\0b\09\09\09\09\09\09\0c\09\09\09\09\09\09\01\09"
  "\09\09\0c\0c\09\09\09\09\0c\09\09\09\09\09\09\09"
  "\09\09\09\09\04\89\80\80\80\00\02\70\01\01\01\70"
  "\01\01\01\05\83\80\80\80\00\01\00\01\06\86\80\80"
  "\80\00\01\7f\01\41\0a\0b\07\f2\86\80\80\00\31\0a"
  "\73\65\6c\65\63\74\2d\69\33\32\00\01\0a\73\65\6c"
  "\65\63\74\2d\69\36\34\00\02\0a\73\65\6c\65\63\74"
  "\2d\66\33\32\00\03\0a\73\65\6c\65\63\74\2d\66\36"
  "\34\00\04\0c\73\65\6c\65\63\74\2d\69\33\32\2d\74"
  "\00\05\0c\73\65\6c\65\63\74\2d\69\36\34\2d\74\00"
  "\06\0c\73\65\6c\65\63\74\2d\66\33\32\2d\74\00\07"
  "\0c\73\65\6c\65\63\74\2d\66\36\34\2d\74\00\08\0e"
  "\73\65\6c\65\63\74\2d\66\75\6e\63\72\65\66\00\09"
  "\10\73\65\6c\65\63\74\2d\65\78\74\65\72\6e\72\65"
  "\66\00\0a\0d\6a\6f\69\6e\2d\66\75\6e\63\6e\75\6c"
  "\6c\00\0c\10\73\65\6c\65\63\74\2d\74\72\61\70\2d"
  "\6c\65\66\74\00\0d\11\73\65\6c\65\63\74\2d\74\72"
  "\61\70\2d\72\69\67\68\74\00\0e\10\73\65\6c\65\63"
  "\74\2d\75\6e\72\65\61\63\68\65\64\00\0f\19\73\65"
  "\6c\65\63\74\5f\75\6e\72\65\61\63\68\65\64\5f\72"
  "\65\73\75\6c\74\5f\31\00\10\19\73\65\6c\65\63\74"
  "\5f\75\6e\72\65\61\63\68\65\64\5f\72\65\73\75\6c"
  "\74\5f\32\00\11\0f\61\73\2d\73\65\6c\65\63\74\2d"
  "\66\69\72\73\74\00\12\0d\61\73\2d\73\65\6c\65\63"
  "\74\2d\6d\69\64\00\13\0e\61\73\2d\73\65\6c\65\63"
  "\74\2d\6c\61\73\74\00\14\0d\61\73\2d\6c\6f\6f\70"
  "\2d\66\69\72\73\74\00\15\0b\61\73\2d\6c\6f\6f\70"
  "\2d\6d\69\64\00\16\0c\61\73\2d\6c\6f\6f\70\2d\6c"
  "\61\73\74\00\17\0f\61\73\2d\69\66\2d\63\6f\6e\64"
  "\69\74\69\6f\6e\00\18\0a\61\73\2d\69\66\2d\74\68"
  "\65\6e\00\19\0a\61\73\2d\69\66\2d\65\6c\73\65\00"
  "\1a\0e\61\73\2d\62\72\5f\69\66\2d\66\69\72\73\74"
  "\00\1b\0d\61\73\2d\62\72\5f\69\66\2d\6c\61\73\74"
  "\00\1c\11\61\73\2d\62\72\5f\74\61\62\6c\65\2d\66"
  "\69\72\73\74\00\1d\10\61\73\2d\62\72\5f\74\61\62"
  "\6c\65\2d\6c\61\73\74\00\1e\16\61\73\2d\63\61\6c"
  "\6c\5f\69\6e\64\69\72\65\63\74\2d\66\69\72\73\74"
  "\00\20\14\61\73\2d\63\61\6c\6c\5f\69\6e\64\69\72"
  "\65\63\74\2d\6d\69\64\00\21\15\61\73\2d\63\61\6c"
  "\6c\5f\69\6e\64\69\72\65\63\74\2d\6c\61\73\74\00"
  "\22\0e\61\73\2d\73\74\6f\72\65\2d\66\69\72\73\74"
  "\00\23\0d\61\73\2d\73\74\6f\72\65\2d\6c\61\73\74"
  "\00\24\14\61\73\2d\6d\65\6d\6f\72\79\2e\67\72\6f"
  "\77\2d\76\61\6c\75\65\00\25\0d\61\73\2d\63\61\6c"
  "\6c\2d\76\61\6c\75\65\00\27\0f\61\73\2d\72\65\74"
  "\75\72\6e\2d\76\61\6c\75\65\00\28\0f\61\73\2d\64"
  "\72\6f\70\2d\6f\70\65\72\61\6e\64\00\29\0b\61\73"
  "\2d\62\72\2d\76\61\6c\75\65\00\2a\12\61\73\2d\6c"
  "\6f\63\61\6c\2e\73\65\74\2d\76\61\6c\75\65\00\2b"
  "\12\61\73\2d\6c\6f\63\61\6c\2e\74\65\65\2d\76\61"
  "\6c\75\65\00\2c\13\61\73\2d\67\6c\6f\62\61\6c\2e"
  "\73\65\74\2d\76\61\6c\75\65\00\2d\0f\61\73\2d\6c"
  "\6f\61\64\2d\6f\70\65\72\61\6e\64\00\2e\10\61\73"
  "\2d\75\6e\61\72\79\2d\6f\70\65\72\61\6e\64\00\2f"
  "\11\61\73\2d\62\69\6e\61\72\79\2d\6f\70\65\72\61"
  "\6e\64\00\30\0f\61\73\2d\74\65\73\74\2d\6f\70\65"
  "\72\61\6e\64\00\31\0f\61\73\2d\63\6f\6d\70\61\72"
  "\65\2d\6c\65\66\74\00\32\10\61\73\2d\63\6f\6d\70"
  "\61\72\65\2d\72\69\67\68\74\00\33\12\61\73\2d\63"
  "\6f\6e\76\65\72\74\2d\6f\70\65\72\61\6e\64\00\34"
  "\09\97\80\80\80\00\03\04\41\00\0b\01\d2\00\0b\03"
  "\00\01\0b\06\01\41\00\0b\70\01\d2\1f\0b\0a\a6\87"
  "\80\80\00\35\82\80\80\80\00\00\0b\89\80\80\80\00"
  "\00\20\00\20\01\20\02\1b\0b\89\80\80\80\00\00\20"
  "\00\20\01\20\02\1b\0b\89\80\80\80\00\00\20\00\20"
  "\01\20\02\1b\0b\89\80\80\80\00\00\20\00\20\01\20"
  "\02\1b\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\7f\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\7e\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\7d\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\7c\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\70\0b\8b\80\80\80\00\00\20\00\20\01\20\02\1c"
  "\01\6f\0b\82\80\80\80\00\00\0b\8b\80\80\80\00\00"
  "\d2\0b\d0\70\20\00\1c\01\70\0b\88\80\80\80\00\00"
  "\00\41\00\20\00\1b\0b\88\80\80\80\00\00\41\00\00"
  "\20\00\1b\0b\a0\80\80\80\00\00\00\1b\00\41\00\1b"
  "\00\41\00\41\00\1b\00\41\00\41\00\41\00\1b\00\43"
  "\00\00\00\00\41\00\1b\00\0b\85\80\80\80\00\00\00"
  "\1b\6a\0b\89\80\80\80\00\00\00\42\00\41\00\1b\7c"
  "\0b\8e\80\80\80\00\00\41\00\41\01\20\00\1b\41\02"
  "\41\03\1b\0b\8e\80\80\80\00\00\41\02\41\00\41\01"
  "\20\00\1b\41\03\1b\0b\8e\80\80\80\00\00\41\02\41"
  "\03\41\00\41\01\20\00\1b\1b\0b\90\80\80\80\00\00"
  "\03\7f\41\02\41\03\20\00\1b\10\00\10\00\0b\0b\90"
  "\80\80\80\00\00\03\7f\10\00\41\02\41\03\20\00\1b"
  "\10\00\0b\0b\90\80\80\80\00\00\03\7f\10\00\10\00"
  "\41\02\41\03\20\00\1b\0b\0b\8e\80\80\80\00\00\41"
  "\02\41\03\20\00\1b\04\40\10\00\0b\0b\91\80\80\80"
  "\00\00\41\01\04\7f\41\02\41\03\20\00\1b\05\41\04"
  "\0b\0b\91\80\80\80\00\00\41\00\04\7f\41\02\05\41"
  "\02\41\03\20\00\1b\0b\0b\90\80\80\80\00\00\02\7f"
  "\41\02\41\03\20\00\1b\41\04\0d\00\0b\0b\90\80\80"
  "\80\00\00\02\7f\41\02\41\02\41\03\20\00\1b\0d\00"
  "\0b\0b\92\80\80\80\00\00\02\7f\41\02\41\03\20\00"
  "\1b\41\02\0e\01\00\00\0b\0b\92\80\80\80\00\00\02"
  "\7f\41\02\41\02\41\03\20\00\1b\0e\01\00\00\0b\0b"
  "\84\80\80\80\00\00\20\00\0b\93\80\80\80\00\00\02"
  "\7f\41\02\41\03\20\00\1b\41\01\41\00\11\01\01\0b"
  "\0b\93\80\80\80\00\00\02\7f\41\01\41\02\41\03\20"
  "\00\1b\41\00\11\01\01\0b\0b\93\80\80\80\00\00\02"
  "\7f\41\01\41\04\41\02\41\03\20\00\1b\11\01\01\0b"
  "\0b\8e\80\80\80\00\00\41\00\41\04\20\00\1b\41\01"
  "\36\02\00\0b\8e\80\80\80\00\00\41\08\41\01\41\02"
  "\20\00\1b\36\02\00\0b\8b\80\80\80\00\00\41\01\41"
  "\02\20\00\1b\40\00\0b\84\80\80\80\00\00\20\00\0b"
  "\8b\80\80\80\00\00\41\01\41\02\20\00\1b\10\26\0b"
  "\8a\80\80\80\00\00\41\01\41\02\20\00\1b\0f\0b\8a"
  "\80\80\80\00\00\41\01\41\02\20\00\1b\1a\0b\8e\80"
  "\80\80\00\00\02\7f\41\01\41\02\20\00\1b\0c\00\0b"
  "\0b\8f\80\80\80\00\01\01\7f\41\01\41\02\20\00\1b"
  "\21\00\20\00\0b\8b\80\80\80\00\00\41\01\41\02\20"
  "\00\1b\22\00\0b\8d\80\80\80\00\00\41\01\41\02\20"
  "\00\1b\24\00\23\00\0b\8c\80\80\80\00\00\41\00\41"
  "\04\20\00\1b\28\02\00\0b\8a\80\80\80\00\00\41\00"
  "\41\01\20\00\1b\45\0b\91\80\80\80\00\00\41\01\41"
  "\02\20\00\1b\41\01\41\02\20\00\1b\6c\0b\8d\80\80"
  "\80\00\00\02\7f\41\00\41\01\20\00\1b\45\0b\0b\8f"
  "\80\80\80\00\00\02\7f\41\01\41\02\20\00\1b\41\01"
  "\4c\0b\0b\8f\80\80\80\00\00\02\7f\41\01\41\00\41"
  "\01\20\00\1b\47\0b\0b\8d\80\80\80\00\00\02\7f\42"
  "\01\42\00\20\00\1b\a7\0b\0b"
)
(module instance)
(assert_return
  (invoke "select-i32" (i32.const 0x1) (i32.const 0x2) (i32.const 0x1))
  (i32.const 0x1)
)
(assert_return
  (invoke "select-i64" (i64.const 0x2) (i64.const 0x1) (i32.const 0x1))
  (i64.const 0x2)
)
(assert_return
  (invoke "select-f32" (f32.const 0x1p+0) (f32.const 0x1p+1) (i32.const 0x1))
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f64" (f64.const 0x1p+0) (f64.const 0x1p+1) (i32.const 0x1))
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-i32" (i32.const 0x1) (i32.const 0x2) (i32.const 0x0))
  (i32.const 0x2)
)
(assert_return
  (invoke "select-i32" (i32.const 0x2) (i32.const 0x1) (i32.const 0x0))
  (i32.const 0x1)
)
(assert_return
  (invoke "select-i64" (i64.const 0x2) (i64.const 0x1) (i32.const 0xffff_ffff))
  (i64.const 0x2)
)
(assert_return
  (invoke "select-i64" (i64.const 0x2) (i64.const 0x1) (i32.const 0xf0f0_f0f0))
  (i64.const 0x2)
)
(assert_return
  (invoke "select-f32"
    (f32.const nan:0x40_0000)
    (f32.const 0x1p+0)
    (i32.const 0x1)
  )
  (f32.const nan:0x40_0000)
)
(assert_return
  (invoke "select-f32"
    (f32.const nan:0x2_0304)
    (f32.const 0x1p+0)
    (i32.const 0x1)
  )
  (f32.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f32"
    (f32.const nan:0x40_0000)
    (f32.const 0x1p+0)
    (i32.const 0x0)
  )
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f32"
    (f32.const nan:0x2_0304)
    (f32.const 0x1p+0)
    (i32.const 0x0)
  )
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f32"
    (f32.const 0x1p+1)
    (f32.const nan:0x40_0000)
    (i32.const 0x1)
  )
  (f32.const 0x1p+1)
)
(assert_return
  (invoke "select-f32"
    (f32.const 0x1p+1)
    (f32.const nan:0x2_0304)
    (i32.const 0x1)
  )
  (f32.const 0x1p+1)
)
(assert_return
  (invoke "select-f32"
    (f32.const 0x1p+1)
    (f32.const nan:0x40_0000)
    (i32.const 0x0)
  )
  (f32.const nan:0x40_0000)
)
(assert_return
  (invoke "select-f32"
    (f32.const 0x1p+1)
    (f32.const nan:0x2_0304)
    (i32.const 0x0)
  )
  (f32.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f64"
    (f64.const nan:0x8_0000_0000_0000)
    (f64.const 0x1p+0)
    (i32.const 0x1)
  )
  (f64.const nan:0x8_0000_0000_0000)
)
(assert_return
  (invoke "select-f64"
    (f64.const nan:0x2_0304)
    (f64.const 0x1p+0)
    (i32.const 0x1)
  )
  (f64.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f64"
    (f64.const nan:0x8_0000_0000_0000)
    (f64.const 0x1p+0)
    (i32.const 0x0)
  )
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-f64"
    (f64.const nan:0x2_0304)
    (f64.const 0x1p+0)
    (i32.const 0x0)
  )
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-f64"
    (f64.const 0x1p+1)
    (f64.const nan:0x8_0000_0000_0000)
    (i32.const 0x1)
  )
  (f64.const 0x1p+1)
)
(assert_return
  (invoke "select-f64"
    (f64.const 0x1p+1)
    (f64.const nan:0x2_0304)
    (i32.const 0x1)
  )
  (f64.const 0x1p+1)
)
(assert_return
  (invoke "select-f64"
    (f64.const 0x1p+1)
    (f64.const nan:0x8_0000_0000_0000)
    (i32.const 0x0)
  )
  (f64.const nan:0x8_0000_0000_0000)
)
(assert_return
  (invoke "select-f64"
    (f64.const 0x1p+1)
    (f64.const nan:0x2_0304)
    (i32.const 0x0)
  )
  (f64.const nan:0x2_0304)
)
(assert_return
  (invoke "select-i32-t" (i32.const 0x1) (i32.const 0x2) (i32.const 0x1))
  (i32.const 0x1)
)
(assert_return
  (invoke "select-i64-t" (i64.const 0x2) (i64.const 0x1) (i32.const 0x1))
  (i64.const 0x2)
)
(assert_return
  (invoke "select-f32-t" (f32.const 0x1p+0) (f32.const 0x1p+1) (i32.const 0x1))
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f64-t" (f64.const 0x1p+0) (f64.const 0x1p+1) (i32.const 0x1))
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-funcref" (ref.null func) (ref.null func) (i32.const 0x1))
  (ref.null func)
)
(assert_return
  (invoke "select-externref" (ref.extern 1) (ref.extern 2) (i32.const 0x1))
  (ref.extern 1)
)
(assert_return
  (invoke "select-i32-t" (i32.const 0x1) (i32.const 0x2) (i32.const 0x0))
  (i32.const 0x2)
)
(assert_return
  (invoke "select-i32-t" (i32.const 0x2) (i32.const 0x1) (i32.const 0x0))
  (i32.const 0x1)
)
(assert_return
  (invoke "select-i64-t"
    (i64.const 0x2)
    (i64.const 0x1)
    (i32.const 0xffff_ffff)
  )
  (i64.const 0x2)
)
(assert_return
  (invoke "select-i64-t"
    (i64.const 0x2)
    (i64.const 0x1)
    (i32.const 0xf0f0_f0f0)
  )
  (i64.const 0x2)
)
(assert_return
  (invoke "select-externref" (ref.extern 1) (ref.extern 2) (i32.const 0x0))
  (ref.extern 2)
)
(assert_return
  (invoke "select-externref" (ref.extern 2) (ref.extern 1) (i32.const 0x0))
  (ref.extern 1)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const nan:0x40_0000)
    (f32.const 0x1p+0)
    (i32.const 0x1)
  )
  (f32.const nan:0x40_0000)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const nan:0x2_0304)
    (f32.const 0x1p+0)
    (i32.const 0x1)
  )
  (f32.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const nan:0x40_0000)
    (f32.const 0x1p+0)
    (i32.const 0x0)
  )
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const nan:0x2_0304)
    (f32.const 0x1p+0)
    (i32.const 0x0)
  )
  (f32.const 0x1p+0)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const 0x1p+1)
    (f32.const nan:0x40_0000)
    (i32.const 0x1)
  )
  (f32.const 0x1p+1)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const 0x1p+1)
    (f32.const nan:0x2_0304)
    (i32.const 0x1)
  )
  (f32.const 0x1p+1)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const 0x1p+1)
    (f32.const nan:0x40_0000)
    (i32.const 0x0)
  )
  (f32.const nan:0x40_0000)
)
(assert_return
  (invoke "select-f32-t"
    (f32.const 0x1p+1)
    (f32.const nan:0x2_0304)
    (i32.const 0x0)
  )
  (f32.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const nan:0x8_0000_0000_0000)
    (f64.const 0x1p+0)
    (i32.const 0x1)
  )
  (f64.const nan:0x8_0000_0000_0000)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const nan:0x2_0304)
    (f64.const 0x1p+0)
    (i32.const 0x1)
  )
  (f64.const nan:0x2_0304)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const nan:0x8_0000_0000_0000)
    (f64.const 0x1p+0)
    (i32.const 0x0)
  )
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const nan:0x2_0304)
    (f64.const 0x1p+0)
    (i32.const 0x0)
  )
  (f64.const 0x1p+0)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const 0x1p+1)
    (f64.const nan:0x8_0000_0000_0000)
    (i32.const 0x1)
  )
  (f64.const 0x1p+1)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const 0x1p+1)
    (f64.const nan:0x2_0304)
    (i32.const 0x1)
  )
  (f64.const 0x1p+1)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const 0x1p+1)
    (f64.const nan:0x8_0000_0000_0000)
    (i32.const 0x0)
  )
  (f64.const nan:0x8_0000_0000_0000)
)
(assert_return
  (invoke "select-f64-t"
    (f64.const 0x1p+1)
    (f64.const nan:0x2_0304)
    (i32.const 0x0)
  )
  (f64.const nan:0x2_0304)
)
(assert_return (invoke "join-funcnull" (i32.const 0x1)) (ref.func))
(assert_return (invoke "join-funcnull" (i32.const 0x0)) (ref.null))
(assert_trap (invoke "select-trap-left" (i32.const 0x1)) "unreachable")
(assert_trap (invoke "select-trap-left" (i32.const 0x0)) "unreachable")
(assert_trap (invoke "select-trap-right" (i32.const 0x1)) "unreachable")
(assert_trap (invoke "select-trap-right" (i32.const 0x0)) "unreachable")
(assert_return (invoke "as-select-first" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "as-select-first" (i32.const 0x1)) (i32.const 0x0))
(assert_return (invoke "as-select-mid" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-select-mid" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-select-last" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-select-last" (i32.const 0x1)) (i32.const 0x3))
(assert_return (invoke "as-loop-first" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-loop-first" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-loop-mid" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-loop-mid" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-loop-last" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-loop-last" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-if-condition" (i32.const 0x0)))
(assert_return (invoke "as-if-condition" (i32.const 0x1)))
(assert_return (invoke "as-if-then" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-if-then" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-if-else" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-if-else" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-br_if-first" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-br_if-first" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-br_if-last" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-br_if-last" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-br_table-first" (i32.const 0x0)) (i32.const 0x3))
(assert_return (invoke "as-br_table-first" (i32.const 0x1)) (i32.const 0x2))
(assert_return (invoke "as-br_table-last" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-br_table-last" (i32.const 0x1)) (i32.const 0x2))
(assert_return
  (invoke "as-call_indirect-first" (i32.const 0x0))
  (i32.const 0x3)
)
(assert_return
  (invoke "as-call_indirect-first" (i32.const 0x1))
  (i32.const 0x2)
)
(assert_return (invoke "as-call_indirect-mid" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "as-call_indirect-mid" (i32.const 0x1)) (i32.const 0x1))
(assert_trap
  (invoke "as-call_indirect-last" (i32.const 0x0))
  "undefined element"
)
(assert_trap
  (invoke "as-call_indirect-last" (i32.const 0x1))
  "undefined element"
)
(assert_return (invoke "as-store-first" (i32.const 0x0)))
(assert_return (invoke "as-store-first" (i32.const 0x1)))
(assert_return (invoke "as-store-last" (i32.const 0x0)))
(assert_return (invoke "as-store-last" (i32.const 0x1)))
(assert_return (invoke "as-memory.grow-value" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "as-memory.grow-value" (i32.const 0x1)) (i32.const 0x3))
(assert_return (invoke "as-call-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-call-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-return-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-return-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-drop-operand" (i32.const 0x0)))
(assert_return (invoke "as-drop-operand" (i32.const 0x1)))
(assert_return (invoke "as-br-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-br-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-local.set-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-local.set-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-local.tee-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-local.tee-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-global.set-value" (i32.const 0x0)) (i32.const 0x2))
(assert_return (invoke "as-global.set-value" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-load-operand" (i32.const 0x0)) (i32.const 0x1))
(assert_return (invoke "as-load-operand" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-unary-operand" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "as-unary-operand" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-binary-operand" (i32.const 0x0)) (i32.const 0x4))
(assert_return (invoke "as-binary-operand" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-test-operand" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "as-test-operand" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-compare-left" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "as-compare-left" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-compare-right" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "as-compare-right" (i32.const 0x1)) (i32.const 0x1))
(assert_return (invoke "as-convert-operand" (i32.const 0x0)) (i32.const 0x0))
(assert_return (invoke "as-convert-operand" (i32.const 0x1)) (i32.const 0x1))
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8d\80\80\80\00"
    "\01\87\80\80\80\00\00\01\01\41\01\1b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\00\01\01\41\01\1c\00\0b"
  )
  "invalid result arity"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\86\80\80\80\00\01\60"
    "\00\02\7f\7f\03\82\80\80\80\00\01\00\0a\96\80\80"
    "\80\00\01\90\80\80\80\00\00\41\00\41\00\41\00\41"
    "\00\41\01\1c\02\7f\7f\0b"
  )
  "invalid result arity"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\00\00\60\01\64\00\00\03\82\80\80\80\00\01\01\0a"
    "\90\80\80\80\00\01\8a\80\80\80\00\00\20\00\20\00"
    "\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\01\70\00\03\82\80\80\80\00\01\00\0a\90\80\80\80"
    "\00\01\8a\80\80\80\00\00\20\00\20\00\41\01\1b\1a"
    "\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\01\6f\00\03\82\80\80\80\00\01\00\0a\90\80\80\80"
    "\00\01\8a\80\80\80\00\00\20\00\20\00\41\01\1b\1a"
    "\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
  "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
  "\01\88\80\80\80\00\00\00\41\01\1b\d1\1a\0b"
)
(module instance)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\90\80\80\80\00"
    "\01\8a\80\80\80\00\00\41\01\42\01\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\01\43\00\00\80\3f\41\01"
    "\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\97\80\80\80\00"
    "\01\91\80\80\80\00\00\41\01\44\00\00\00\00\00\00"
    "\f0\3f\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\90\80\80\80\00"
    "\01\8a\80\80\80\00\00\41\01\42\01\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\01\43\00\00\80\3f\41\01"
    "\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\90\80\80\80\00"
    "\01\8a\80\80\80\00\00\41\01\42\01\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\01\43\00\00\80\3f\41\01"
    "\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\97\80\80\80\00"
    "\01\91\80\80\80\00\00\41\01\44\00\00\00\00\00\00"
    "\f0\3f\41\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8a\80\80\80\00"
    "\01\84\80\80\80\00\00\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8c\80\80\80\00"
    "\01\86\80\80\80\00\00\41\00\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\8e\80\80\80\00"
    "\01\88\80\80\80\00\00\41\00\41\00\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\41\00\02\40\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\02\40\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\02\40\41\00\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\41\00\03\40\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\03\40\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\03\40\41\00\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\41\00\04\40\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\41\00\04\40\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\00\04\40\41\00\41\00\1b"
    "\1a\0b\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\90\80\80\80\00"
    "\01\8a\80\80\80\00\00\41\01\41\01\42\01\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\93\80\80\80\00"
    "\01\8d\80\80\80\00\00\41\01\41\01\43\00\00\80\3f"
    "\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\82\80\80\80\00\01\00\0a\97\80\80\80\00"
    "\01\91\80\80\80\00\00\41\01\41\01\44\00\00\00\00"
    "\00\00\f0\3f\1b\1a\0b"
  )
  "type mismatch"
)
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\03\82\80\80\80\00\01\00\0a\8f\80\80\80"
    "\00\01\89\80\80\80\00\00\42\01\42\01\41\01\1b\0b"
  )
  "type mismatch"
)
(module definition binary
  "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
  "\00\01\7f\60\00\00\03\8c\80\80\80\00\0b\00\00\00"
  "\00\00\00\00\00\00\00\00\04\84\80\80\80\00\01\70"
  "\00\01\0a\fc\80\80\80\00\0b\84\80\80\80\00\00\00"
  "\1b\0b\85\80\80\80\00\00\00\1b\01\0b\85\80\80\80"
  "\00\00\00\1b\1b\0b\85\80\80\80\00\00\00\1b\1b\0b"
  "\86\80\80\80\00\00\00\1b\1b\1b\0b\86\80\80\80\00"
  "\00\00\1c\01\7f\0b\86\80\80\80\00\00\00\1c\01\7f"
  "\0b\87\80\80\80\00\00\00\1c\01\7f\1b\0b\89\80\80"
  "\80\00\00\00\1c\01\7f\1c\01\7f\0b\87\80\80\80\00"
  "\00\00\1b\11\01\00\0b\88\80\80\80\00\00\00\1b\11"
  "\01\00\1b\0b"
)
(module instance)
